--- a/templates/speech.html
+++ b/templates/speech.html
@@ -8,7 +8,7 @@
 <button id="start-btn">start</button>
 <button id="stop-btn">stop</button>
 <div id="result-div"></div>
-
+<div id="google_translate_element"></div>
 <script>
   const startBtn = document.querySelector('#start-btn');
   const stopBtn = document.querySelector('#stop-btn');
@@ -34,6 +34,7 @@
       }
     }
     resultDiv.innerHTML = finalTranscript + '<i style="color:#ddd;">' + interimTranscript + '</i>';
+      
   }
 
   startBtn.onclick = () => {
@@ -42,7 +43,16 @@
   stopBtn.onclick = () => {
     recognition.stop();
   }
+  
 </script>
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
     {{myresult}}
 </body>
 </html>
