--- a/templates/speech.html
+++ b/templates/speech.html
@@ -47,7 +47,7 @@
 </script>
     <script type="text/javascript">
 function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+  new google.translate.TranslateElement({pageLanguage: 'ja'}, 'google_translate_element');
 }
 </script>
 
