--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<button id="start-btn">start</button>
-<button id="stop-btn">stop</button>
-<div id="result-div"></div>
-<div id="google_translate_element">
+<html>
+<title>W3.CSS</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.w3-button {width:150px}
+</style>
+
+<body style="max-width:600px">
+
+<nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+<div class="w3-container w3-theme-d2">
+  <span onclick="closeSidebar()" class="w3-button w3-display-topright w3-large">X</span>
+  <br>
+  <div class="w3-padding w3-center">
+    <img class="w3-circle" src="avatar.png" alt="avatar" style="width:75%">
+  </div>
+</div>
+<a class="w3-bar-item w3-button" href="#">Movies</a>
+<a class="w3-bar-item w3-button" href="#">Friends</a>
+<a class="w3-bar-item w3-button" href="#">Messages</a>
+</nav>
+
+<header class="w3-bar w3-card w3-theme">
+  <button class="w3-bar-item w3-button w3-xxxlarge w3-hover-theme" onclick="openSidebar()">&#9776;</button>
+  <h1 class="w3-bar-item">Movies</h1>
+</header>
+
+<div class="w3-container">
+<hr>
+<div class="w3-cell-row">
+  <div class="w3-cell w3-container">
+    <button id="start-btn">start</button>
+    <button id="stop-btn">stop</button>
+    <div id="result-div"></div>
+    <div id="google_translate_element"></div>
     <p id="text1"></p>
     <textarea id="text" rows="10" cols="50"></textarea>
-
+    <button onclick="myFunction()">click</button>
+    <select id="voice-select"></select>
+    <button id="speak-btn" onclick="myFunction()">再生</button>
+  </div>
+    </div>
 </div>
+
+<hr>
+</div>
+
+<footer class="w3-container w3-theme w3-margin-top">
+  <h3>Footer</h3>
+</footer>
+
+<script>
+closeSidebar();
+function openSidebar() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function closeSidebar() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
 <script>
   const startBtn = document.querySelector('#start-btn');
   const stopBtn = document.querySelector('#stop-btn');
@@ -50,11 +101,6 @@
     recognition.stop();
   }
 </script>
-
-
-<button onclick="myFunction()">click</button>
-<select id="voice-select"></select>
-<button id="speak-btn" onclick="myFunction()">再生</button>
 
 <script>
 function myFunction() {
@@ -115,4 +161,3 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
-</html>
