--- a/templates/home.html
+++ b/templates/home.html
@@ -100,7 +100,7 @@ function closeSidebar() {
       }
     }
 
-    var x = finalTranscript +  interimTranscript;
+    var x = finalTranscript;
     document.getElementById("textT").innerHTML = x
     document.getElementById("text1").innerHTML = x
 
