--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@ function closeSidebar() {
     resultDiv.innerHTML = finalTranscript + '<i style="color:#ddd;">' + interimTranscript + '</i>';
     var x = finalTranscript +  interimTranscript;
     document.getElementById("textT").innerHTML = finalTranscript + '<i style="color:#ddd;">' + interimTranscript + '</i>';
-    document.getElementById("text1").innerHTML = finalTranscript + '<i style="color:#ddd;">' + interimTranscript + '</i>';
+    document.getElementById("text1").innerHTML = x;
 
 
   }
